[gd_scene load_steps=19 format=3 uid="uid://7r06s8m5csic"]

[ext_resource type="Texture2D" uid="uid://dbvve5t3lrs3r" path="res://Opening/base.png" id="1_axi15"]
[ext_resource type="Script" path="res://animation.gd" id="1_iwiae"]
[ext_resource type="Texture2D" uid="uid://y64en7u734t0" path="res://Opening/1.png" id="2_0nagh"]
[ext_resource type="Texture2D" uid="uid://dnfxq1klx12wb" path="res://Opening/base2.png" id="2_dkspb"]
[ext_resource type="Texture2D" uid="uid://6d5uy8aoelrq" path="res://Opening/2.png" id="3_dfa8u"]
[ext_resource type="Texture2D" uid="uid://joenmuylkm2g" path="res://Opening/3.png" id="4_51oud"]
[ext_resource type="Texture2D" uid="uid://ksf3y872r284" path="res://Opening/4.png" id="5_h43qt"]
[ext_resource type="Texture2D" uid="uid://w80dplxdh24u" path="res://Opening/5.png" id="6_ksr3t"]
[ext_resource type="Texture2D" uid="uid://duxv4fxs12w7e" path="res://Opening/6.png" id="7_yhgqr"]
[ext_resource type="Texture2D" uid="uid://dkoi3x8q6cqxv" path="res://Opening/7.png" id="8_y1a7t"]
[ext_resource type="Texture2D" uid="uid://8236h2amapkq" path="res://Opening/8.png" id="9_3y61y"]
[ext_resource type="Texture2D" uid="uid://ckw5h0qyw2ehr" path="res://Opening/9.png" id="10_u3488"]
[ext_resource type="Texture2D" uid="uid://cab8slfh6o36w" path="res://Opening/10.png" id="11_plmd4"]
[ext_resource type="Texture2D" uid="uid://cgudjncmy7yir" path="res://black.png" id="14_6oymv"]
[ext_resource type="Texture2D" uid="uid://da0s4fmwor73h" path="res://interrogation/textbox.png" id="14_qgmlf"]
[ext_resource type="Texture2D" uid="uid://eblv3x4cvaoc" path="res://end.png" id="14_wg20k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ivxx1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_axi15")
}, {
"duration": 1.0,
"texture": ExtResource("2_dkspb")
}],
"loop": true,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_6efh2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0nagh")
}, {
"duration": 1.0,
"texture": ExtResource("3_dfa8u")
}, {
"duration": 1.0,
"texture": ExtResource("4_51oud")
}, {
"duration": 1.0,
"texture": ExtResource("5_h43qt")
}, {
"duration": 1.0,
"texture": ExtResource("6_ksr3t")
}, {
"duration": 1.0,
"texture": ExtResource("7_yhgqr")
}, {
"duration": 1.0,
"texture": ExtResource("8_y1a7t")
}, {
"duration": 1.0,
"texture": ExtResource("9_3y61y")
}, {
"duration": 1.0,
"texture": ExtResource("10_u3488")
}, {
"duration": 1.0,
"texture": ExtResource("11_plmd4")
}],
"loop": false,
"name": &"sequence",
"speed": 5.0
}]

[node name="animation" type="Node2D"]
script = ExtResource("1_iwiae")

[node name="animated1" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 325)
scale = Vector2(0.802659, 0.950147)
sprite_frames = SubResource("SpriteFrames_ivxx1")
animation = &"start"

[node name="animated2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(578, 329)
scale = Vector2(1.20625, 1.44066)
sprite_frames = SubResource("SpriteFrames_6efh2")
animation = &"sequence"

[node name="next" type="Sprite2D" parent="."]
visible = false
top_level = true
position = Vector2(545, 332)
scale = Vector2(1.1276, 1.07716)
texture = ExtResource("14_6oymv")

[node name="endScreen" type="Sprite2D" parent="."]
visible = false
top_level = true
position = Vector2(596, 346)
scale = Vector2(1.06163, 1.1142)
texture = ExtResource("14_wg20k")

[node name="fail" type="Sprite2D" parent="."]
visible = false
position = Vector2(576.5, 324.5)
scale = Vector2(1.20521, 1.45595)
texture = ExtResource("11_plmd4")

[node name="textbox" type="Sprite2D" parent="."]
position = Vector2(218, 564)
scale = Vector2(0.778937, 0.868132)
texture = ExtResource("14_qgmlf")

[node name="theText" type="Label" parent="textbox"]
offset_left = -244.0
offset_top = -68.0
offset_right = 243.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Hello "
autowrap_mode = 2
